# oxidizedgraph

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  package.json  tsconfig.json  wrangler.toml
.github/workflows/: publish.yml
examples/: git_push.rs  multi_agent.rs  rag_workflow.rs  react_agent.rs  simple_workflow.rs  streaming_events.rs
infra/cloudflare/: sparse-registry-worker.ts  wrangler.toml
infra/crossplane/: claims.yaml  composition.yaml  providers.yaml
src/: channel.rs  edge.rs  error.rs  git.rs  graph.rs  index.ts  lib.rs  message.rs  node.rs  prelude.rs  runner.rs  runtime.rs  state.rs
src/checkpoint/: memory.rs  mod.rs  runner.rs  surreal.rs
src/events/: bus.rs  handler.rs  mod.rs  runner.rs  types.rs
src/nodes/: conditional.rs  function.rs  llm.rs  mod.rs  tool.rs
src/orchestration/: handle.rs  mod.rs  parallel.rs  spawner.rs  subgraph_node.rs
