[package]
name = "oxidizedgraph"
version = "0.1.1"
edition = "2021"
authors = ["stevedores-org"]
description = "A humble attempt at LangGraph in Rust - R-LangGraph framework for building AI agent workflows"
license = "Apache-2.0"
repository = "https://github.com/stevedores-org/oxidizedgraph"
keywords = ["langgraph", "ai", "agents", "workflow", "graph"]
categories = ["asynchronous", "development-tools"]

[features]
default = []
persistence = ["surrealdb"]

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.20"
crossbeam-channel = "0.5"
git2 = "0.19"

# Persistence layer (optional)
surrealdb = { version = "2", optional = true, features = ["kv-mem"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[[example]]
name = "simple_workflow"
path = "examples/simple_workflow.rs"

[[example]]
name = "react_agent"
path = "examples/react_agent.rs"

[[example]]
name = "git_push"
path = "examples/git_push.rs"

[[example]]
name = "rag_workflow"
path = "examples/rag_workflow.rs"
